# cpp-reference-cicd-pipeline

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  hello.cppcheck  sonar-project.properties  vcpkg.json
.github/workflows/: build-and-test.yml  verify-and-validate.yml
cmake/: BoostTestDiscoverTests.cmake  ListContentAndWriteTestsScript.cmake  include_tests.cmake.in  x64-windows-win7.cmake
doc/: doxygen-awesome-custom.css
hello/: hello.cpp
libhello/: hello.cpp  hello.cppm  hello.test.cpp
tests/: .behaverc  junit-to-cppunit.xsl  junit-to-sonar.xsl
tests/features/: hello.feature
tests/features/steps/: hello.py
tests/reports/: TESTS-hello.xml
